--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     </div>
 
-    <p class="text">You have selected <span id="count">0</span> seats of a prive of
+    <p class="text">You have selected <span id="count">0</span> seats of a prive of <span id="dollarS">$</span>
           <span id="total">0</span></p>
 
 
